syntax = "proto3";

package rococo.gateway;

import "artists.proto";
import "museums.proto";

option java_multiple_files = true;
option java_package = "com.shared.proto.paintings";

message Painting {
    string id = 1;
    string title = 2;
    string description = 3;
    string content = 4;
    MuseumRelation museum = 5;
    Artist artist = 6;
}

message GetAllPaintingRequest {
    string title = 1;
    int32 page = 2;
    int32 size = 3;
}

message GetAllPaintingResponse {
    repeated Painting paintings = 1;
    int64 total_count = 2;
}

message GetPaintingByIdRequest {
    string id = 1;
}

message GetPaintingByIdResponse {
    Painting paintings = 1;
    int64 total_count = 2;
}

message GetPaintingByArtistRequest {
    string artistId = 1;
    int32 page = 2;
    int32 size = 3;
}

message GetPaintingByArtistResponse {
    repeated Painting paintings = 1;
    int64 total_count = 2;
}

message ArtistId {
    string id = 1;
}

message MuseumId {
    string id = 1;
}

message AddPaintingRequest {
     string title = 1;
     string description = 2;
     string content = 3;
     MuseumId museum = 4;
     ArtistId artist = 5;
}

message AddPaintingResponse {
     Painting painting = 1;
}

message UpdatePaintingRequest {
     string id = 1;
     string title = 2;
     string description = 3;
     string content = 4;
     MuseumId museum = 5;
     ArtistId artist = 6;
}

message UpdatePaintingResponse {
     Painting painting = 1;
}

service PaintingService {
    rpc GetPaintings(GetAllPaintingRequest) returns (GetAllPaintingResponse);
    rpc GetPaintingById(GetPaintingByIdRequest) returns (GetPaintingByIdResponse);
    rpc GetPaintingByArtist(GetPaintingByArtistRequest) returns (GetPaintingByArtistResponse);
    rpc AddPainting(AddPaintingRequest) returns (AddPaintingResponse);
    rpc UpdatePainting(UpdatePaintingRequest) returns (UpdatePaintingResponse);
}